--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,18 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-    <Button android:id="@+id/button1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Click"></Button>
+
+    <Button
+        android:id="@+id/app"
+        android:layout_width="214dp"
+        android:layout_height="wrap_content"
+        android:text="List of Apps" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Click"></Button>
 
     <ImageView
         android:layout_width="match_parent"
