--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,10 +1,11 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/menu_about"
         android:orderInCategory="100"
         android:icon="@android:drawable/ic_menu_info_details"
-        android:showAsAction="always|withText"
+        app:showAsAction="always|withText"
         android:title="@string/action_about"/>
 
 </menu>
